--- a/main.html
+++ b/main.html
@@ -6,7 +6,8 @@
   </head>
 
   <body>
-    <button id="btn">submit</button>
+    <!-- <button id="btn">submit</button> -->
+    <input type="submit" id="btn" />
     <!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js"></script>
   </body>
